tests/fixtures/invalid/pow_float_set_none.py
# Cannot call pow() with Float, Set[int], None
x = pow(1.0, {1, 2, 3}, None)
